--- a/(Services)Recipe-ShoppingApp /src/app/app.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/app.component.html
@@ -6,11 +6,6 @@
 -->
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <app-recipe *ngIf="feature === 'recipe'"></app-recipe>
-      <app-shopping-list
-        *ngIf="feature === 'shopping-list'"
-      ></app-shopping-list>
-    </div>
+    <div class="col-md-12"><router-outlet></router-outlet></div>
   </div>
 </div>
