--- a/(Services)Recipe-ShoppingApp /src/app/app.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (navClickItem)="clickedNavItem($event)"></app-header>
+<app-header></app-header>
 <!--
   <p appBetterHighlight [mouseOver]="'red'" [mouseLeave]="'white'">
     App better highlight
