--- a/(Services)Recipe-ShoppingApp /src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -19,10 +19,10 @@
       <button class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu" style="cursor: pointer">
         <li><a (click)="onAddToList()">To Shopping List</a></li>
-        <li><a href="">Edit Recipe</a></li>
-        <li><a href="">Delete Recipe</a></li>
+        <li><a (click)="onRecipeEdit()">Edit Recipe</a></li>
+        <li><a>Delete Recipe</a></li>
       </ul>
     </div>
   </div>
