--- a/(Services)Recipe-ShoppingApp /src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
       <ul class="dropdown-menu" style="cursor: pointer">
         <li><a (click)="onAddToList()">To Shopping List</a></li>
         <li><a (click)="onRecipeEdit()">Edit Recipe</a></li>
-        <li><a>Delete Recipe</a></li>
+        <li><a (click)="deleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
