--- a/(Services)Recipe-ShoppingApp /src/app/shopping-list/shopping-list.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
       <a
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingridient of ingridients"
+        *ngFor="let ingridient of ingridients; let i = index"
+        (click)="onEditItem(i)"
       >
         {{ ingridient.name }} {{ ingridient.amount }}
       </a>
