--- a/(Services)Recipe-ShoppingApp /src/app/header/header.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/header/header.component.html
@@ -5,19 +5,27 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/recipes">Recipes</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/auth">Authenticate</a>
+        </li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated">
+          <a>Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a>Save Data </a></li>
-            <li><a>Fetch Data </a></li>
+            <li><a (click)="onSaveData()">Save Data </a></li>
+            <li><a (click)="onFetchData()">Fetch Data </a></li>
           </ul>
         </li>
       </ul>
