--- a/(Services)Recipe-ShoppingApp /src/app/header/header.component.html
+++ b/(Services)Recipe-ShoppingApp /src/app/header/header.component.html
@@ -17,7 +17,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li *ngIf="isAuthenticated">
-          <a>Logout</a>
+          <a (click)="onLogout()">Logout</a>
         </li>
         <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a class="dropdown-toggle" role="button"
